# ansys-fluent-skills

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/fluent-doc/: SKILL.md
.claude/skills/fluent-doc/references/: theory_toc_v252.json  user_toc_v252.json
examples/: baking_oven_simulation.py  plasma_cvd_simulation.py
md-files/: exploration-log.md  implementation-plan.md  user-story-battery-cooling.md
src/fluent_doc/: __init__.py  cli.py  core.py
