[project]
name = "ansys-fluent-skills"
version = "0.1.0"
description = "Claude Code skill for Ansys Fluent documentation lookup"
requires-python = ">=3.9"
license = "MIT"

dependencies = [
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
fluent-doc = "fluent_doc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fluent_doc"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
]
